--- a/templates/base.html
+++ b/templates/base.html
@@ -285,7 +285,7 @@
                     <div class="col-lg-6 col-md-6">
                         <!-- Footer Copyright Start -->
                         <div class="footer-copyright-text">
-                            <p>Copyright 2024 Aastha Therapy Center. All Rights Reserved.</p>
+                            <p>&copy; 2025 Aastha Therapy Center. All Rights Reserved. | Developed by <a href="https://github.com/sorkerlimon" target="_blank" style="color: #007bff; text-decoration: none;">Sorker Limon</a></p>
                         </div>
                         <!-- Footer Copyright End -->
                     </div>
