update book apinmtn

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -592,7 +592,7 @@
 
                         <!-- Service Footer Start -->
                         <div class="service-cta-btn">
-                            <a href="#" class="btn-default">Book Appointment</a>
+                            <a href="{% url 'astha_therapy_center_web:appointment' %}" class="btn-default">Book Appointment</a>
                         </div>
                         <!-- Service Footer End -->
                     </div>
