--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -25,7 +25,7 @@
 						<!-- Contact Info Content Start -->
 						<div class="contact-info-content">
 							<h3>location</h3>
-							<p>24/11 Robert Road , New York , USA</p>
+							<p>P# 9/2, R# 05, B# B, Sectio  n # 06, Mirpur, Dhaka-1216</p>
 						</div>
 						<!-- Contact Info Content End -->
 					</div>
@@ -44,8 +44,8 @@
 						<!-- Contact Info Content Start -->
 						<div class="contact-info-content">
 							<h3>email</h3>
-							<p>info@domainname.com</p>
-							<p>sales@domainname.com</p>
+							<p>asthatherapycenter@gmail.com</p>
+							<p>shabnam.ot@gmail.com</p>
 						</div>
 						<!-- Contact Info Content End -->
 					</div>
@@ -64,8 +64,7 @@
 						<!-- Contact Info Content Start -->
 						<div class="contact-info-content">
 							<h3>phone</h3>
-							<p>(+01) 789 854 856</p>
-							<p>(+02) 895 867 781</p>
+							<p>(+880) 16816-52122</p>
 						</div>
 						<!-- Contact Info Content End -->
 					</div>
@@ -84,8 +83,8 @@
 						<!-- Contact Info Content Start -->
 						<div class="contact-info-content">
 							<h3>working hours</h3>
-							<p>Mon to Fri : 10:00 To 6:00</p>
-							<p>Sat : 10:00AM To 3:00PM</p>
+							<p>Sat to Thu : 10:00 To 6:00</p>
+							<p>Sun : Closed</p>
 						</div>
 						<!-- Contact Info Content End -->
 					</div>
