--- a/templates/base.html
+++ b/templates/base.html
@@ -159,8 +159,8 @@
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<!-- Logo Start -->
-					<a class="navbar-brand" href="{% url 'astha_therapy_center_web:home' %}">
-						<img src="{% static 'images/asthatherapycenter.jpeg' %}" alt="Astha Therapy Center" style="height: 80px; width: auto; object-fit: contain;">
+					<a class="navbar-brand d-flex align-items-center" href="{% url 'astha_therapy_center_web:home' %}" style="margin-bottom: 0;">
+						<img src="{% static 'images/asthatherapycenter.jpeg' %}" alt="Astha Therapy Center" style="height: 70px; width: auto; object-fit: contain; vertical-align: middle; margin-top: -15px;">
 					</a>
 					<!-- Logo End -->
 
